# vtl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  main.c  run.bat  run.sh  Рекомендации.txt
.cache/clangd/index/: VTL.h.80266BCFF021A5A0.idx  VTL_app_result.h.921D871F3EE39731.idx  VTL_audio.h.F0F5F66CF26DA170.idx  VTL_audio_config.h.1466F6439326A870.idx  VTL_audio_configs_for_gen_init.c.4DE7B4394E4C3486.idx  VTL_audio_configs_for_gen_init.h.47FA41C0B1B7B2E7.idx  VTL_audio_data.c.5D124E500B07B202.idx  VTL_audio_data.h.D4B5184C59EE0B64.idx  VTL_audio_file.h.5257CAE6B84E0FF0.idx  VTL_audio_gen.c.71D58F6786CABF7B.idx  VTL_audio_gen.h.C44FEDAE5F4B384C.idx  VTL_audio_read.c.30F07B420576A5AB.idx  VTL_audio_read.h.B456350337DF28FC.idx  VTL_audio_write.c.5375CAE423923752.idx  VTL_audio_write.h.20447EB5D85DF619.idx  VTL_buffer_data.h.B4AF09AC18936FD9.idx  VTL_console_log.c.D4FDE09C6F0FC879.idx  VTL_console_log.h.F39CDEC9967438F2.idx  VTL_content_platform_flags.h.C6A1A6756B336403.idx  VTL_content_platform_flags_check.c.496B5DF1629C65CE.idx  VTL_content_platform_flags_check.h.2CC7EF124960D121.idx  VTL_content_platform_infra.h.683CB1CD7794EC81.idx  VTL_content_platform_publication.c.FBBC8DD60D3FBC7D.idx  VTL_content_platform_publication.h.27483FBBFFD9E56F.idx  VTL_content_platform_tg_net.c.E857DF9CEC5E557F.idx  VTL_content_platform_tg_net.h.3CD9100171C78D5F.idx  VTL_content_platform_tg_params_audio.c.6ABBA7E2708109B3.idx  VTL_content_platform_tg_params_audio.h.7C8D2AB5B73F403B.idx  VTL_content_platform_tg_params_sub.c.E3115C878D815E13.idx  VTL_content_platform_tg_params_sub.h.07DBAE6162F69A98.idx  VTL_content_platform_tg_params_video.c.0FC965EB0100F15B.idx  VTL_content_platform_tg_params_video.h.BF091EF00E643CB0.idx  VTL_content_platform_tg_publication.h.0EE883ABE6ECB3B5.idx  VTL_db_credentals.c.C84D02CAFCDE7910.idx  VTL_db_credentals.h.6C4519A30BB4B054.idx  VTL_encryptor.c.C5EA49040E186BE3.idx  VTL_encryptor.h.A2931D35B434215B.idx  VTL_file.c.7082E4022F9D2F44.idx  VTL_file.h.53B427EC8713AC4D.idx  VTL_img_core.c.913B41419B318D1C.idx  (+57 more)
VTL/: VTL.h  VTL_app_result.h  VTL_console.c  VTL_console.h  VTL_content_platform_flags.h  VTL_content_platform_postfixes.h  VTL_context.h  VTL_converter.c  VTL_converter.h  VTL_file_ops.c  VTL_file_ops.h  VTL_markup_types.h  VTL_publication_markup_text_flags.h  VTL_time.c  main.c
VTL/content_platform/: VTL_content_platform_flags_check.c  VTL_content_platform_flags_check.h  VTL_content_platform_publication.c  VTL_content_platform_publication.h
VTL/content_platform/infra/: VTL_content_platform_infra.h
VTL/content_platform/infra/audio/: VTL_audio_configs_for_gen_init.c  VTL_audio_configs_for_gen_init.h  VTL_audio_gen.c  VTL_audio_gen.h
VTL/content_platform/infra/text/: VTL_publication_text_gen.c  VTL_publication_text_gen.h  VTL_text_configs_for_gen_init.c  VTL_text_configs_for_gen_init.h
VTL/content_platform/reddit/: VTL_content_platform_reddit_net.c  VTL_content_platform_reddit_net.h  VTL_content_platform_reddit_publication.h
VTL/content_platform/reddit/media_container_params/: VTL_content_platform_reddit_params_video.c  VTL_content_platform_reddit_params_video.h
VTL/content_platform/tg/: VTL_content_platform_tg_net.c  VTL_content_platform_tg_net.h  VTL_content_platform_tg_publication.h
VTL/content_platform/tg/media_container_params/: VTL_content_platform_tg_params_audio.c  VTL_content_platform_tg_params_audio.h  VTL_content_platform_tg_params_sub.c  VTL_content_platform_tg_params_sub.h
VTL/history_administration/: VTL_history_administration.h  VTL_history_administration_data.h
VTL/history_administration/db/: VTL_history_administration_create.h
VTL/history_administration/io/: VTL_history_administration_show.h
VTL/history_administration/user_administration/: VTL_user_model.h
VTL/history_administration/user_administration/db/: VTL_administrate_user.c  VTL_administrate_user.h
VTL/media_container/: VTL_media_container.h  VTL_media_container_data.h  VTL_video_sub_burner.c  VTL_video_sub_burner.h
VTL/media_container/audio/: VTL_audio.h  VTL_audio_data.c  VTL_audio_data.h
VTL/media_container/audio/infra/: VTL_audio_config.h  VTL_audio_file.h  VTL_audio_read.c  VTL_audio_read.h  (+2 more)
VTL/media_container/img/: CMakeLists.txt  Makefile  VTL_img.h  VTL_img_core.c  VTL_img_core.h  VTL_img_data.h  VTL_img_filters.c  VTL_img_filters.h  VTL_img_utils.c  VTL_img_utils.h
VTL/media_container/sub/: VTL_sub.h  VTL_sub_burn.c  VTL_sub_burn.h  VTL_sub_convert.c  VTL_sub_convert.h  VTL_sub_data.c  VTL_sub_data.h  VTL_sub_opencl.c  VTL_sub_opencl.h  VTL_sub_parse.c  VTL_sub_parse.h  VTL_sub_read.c  VTL_sub_read.h  VTL_sub_style.c  VTL_sub_style.h  VTL_sub_write.c  VTL_sub_write.h
VTL/media_container/video/: VTL_video.h  VTL_video_data.c  VTL_video_data.h
VTL/publication/: VTL_publication.c  VTL_publication.h  VTL_publication_data.h
VTL/publication/text/: VTL_publication_markup_text_flags_check.c  VTL_publication_text.c  VTL_publication_text.h  VTL_publication_text_data.c  VTL_publication_text_data.h  VTL_publication_text_op.c  VTL_publication_text_op.h
VTL/test/: CMakeLists.txt  VTL_test.c  VTL_test_data.c  VTL_test_data.h  main_sub_style_demo.c
VTL/test/data/: input.srt  output.ass  output.vtt  subtitle_style.json
VTL/user/: VTL_user.h  VTL_user_data.c  VTL_user_data.h
VTL/user/history/: VTL_user_history.h  VTL_user_history_data.c  VTL_user_history_data.h
VTL/utils/: VTL_buffer_data.h  VTL_encryptor.c  VTL_encryptor.h  VTL_file.c  VTL_file.h  VTL_string.h  VTL_time.c  VTL_time.h  VTL_utils.h  http_client.h
VTL/utils/db/: VTL_db_connection.c  VTL_db_connection.h  VTL_db_credentals.c  VTL_db_credentals.h  VTL_db_executor.c  VTL_db_executor.h
VTL/utils/log/: VTL_console_log.c  VTL_console_log.h
cmake/: FFmpeg.cmake
doc/: test_img_processing.c
ffmpeg_ext-prefix/tmp/: ffmpeg_ext-mkdirs.cmake
vtl_tests/: Makefile  VTL_test_data.c  VTL_test_data.h
vtl_tests/audio/: CMakeLists.txt  Makefile  VTL_audio_data_unit.c
vtl_tests/history_user_administration/: CMakeLists.txt  VTL_history_user_administration_unit.c
(+18 files in other folders)
